--- a/uzlatekachny/static/styles.css
+++ b/uzlatekachny/static/styles.css
@@ -3,6 +3,14 @@
   --margin: 1cm;
 }
 
+img {
+  width: 20%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @page {
   size: A4;
   margin: 0;
@@ -22,7 +30,7 @@ body {
 .page {
   display: inline-block;
   position: relative;
-  height: 297mm;
+  /* height: 297mm; */
   width: 210mm;
   font-size: 12pt;
   margin: 2em auto;
