--- a/uzlatekachny/static/styles.css
+++ b/uzlatekachny/static/styles.css
@@ -22,12 +22,13 @@ img {
 body {
   margin: 0 auto;
   padding: 0;
-  background: rgb(204, 204, 204);
+  background: rgb(182, 182, 182);
   display: flex;
   flex-direction: column;
 }
 
 .page {
+  color: #fcdc17;
   display: inline-block;
   position: relative;
   /* height: 297mm; */
@@ -36,7 +37,7 @@ body {
   margin: 2em auto;
   padding: calc(var(--bleeding) + var(--margin));
   box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
-  background: white;
+  background: black;
 }
 
 @media screen {
