--- a/uzlatekachny/templates/index.html
+++ b/uzlatekachny/templates/index.html
@@ -18,23 +18,30 @@
     <th><img src="{% static 'logo_new_mini.png' %}" alt="U Zlaté Kachny"></th>
     <th>Facebook</th>
   </tr>
-</table>
-  
+  </table>
+  <div class='food_list'>
     {% for food in object_list %}
       <p>
-      {{ food.pk }}. {{ food.name_cs }} {{ food.price }}</br>
-      {{ food.name_en }} / {{ food.name_de }} / {{ food.name_ru }}</br>
+      <div class='food_first_line'>
+        <div class='food_id'>{{ food.pk }}.</div> 
+        <div class='food_name_cs'> {{ food.name_cs }}</div>
+        <div class='food_price'>{{ food.price }}</div>
+      </div> <!-- food_first_line -->
+      <div class='food_translations'>
+      {{ food.name_en }} / {{ food.name_de }} / {{ food.name_ru }}
+      </div> <!-- food_translations -->
       {% if food.ingredients_cs %}
-        <i>
+        <div class='ingredients'>
         {{ food.ingredients_cs }}</br>
         {{ food.ingredients_en }}</br>
         {{ food.ingredients_de }}</br>
         {{ food.ingredients_ru }}
-        </i>
+        </div> <!-- ingredients -->
       {% endif %}
       </p>
     {% endfor %}
-  </div>
+  </div><!-- food_list -->
+  </div><!-- page -->
 </body>
 
 </html>
