--- a/uzlatekachny/static/styles.css
+++ b/uzlatekachny/static/styles.css
@@ -22,6 +22,11 @@
   flex-grow: 1;
 }
 
+p.category {
+  text-align: center;
+  border-top: 1px solid rgb(164, 224, 240);
+  border-bottom: 1px solid rgb(164, 224, 240);
+}
 
 img {
   width: 20%;
@@ -110,7 +115,7 @@ body {
     overflow: hidden;
     background: black;
     }
-  
+    
   table {
     break-inside: avoid-page;
   }
