--- a/uzlatekachny/static/styles.css
+++ b/uzlatekachny/static/styles.css
@@ -100,6 +100,7 @@ body {
   background: rgb(182, 182, 182);
   display: flex;
   flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .page {
