preparation for own food order

--- a/uzlatekachny/templates/index.html
+++ b/uzlatekachny/templates/index.html
@@ -29,7 +29,7 @@
           <table class='food_table'>
             <tr>
             <td class='id_nr'>
-            <div class='food_id'>{{ food.pk }}.</div>
+            <div class='food_id'>{{ food.order }}.</div>
             </td>
             <td>
             <div class='food_cell'>
